Fixed black bars on Firefox

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,9 +5,13 @@
   --slate900: hsl(218, 44%, 22%);
 }
 
+html,
 body {
   background-color: var(--slate300);
-  height: 98vh;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
   font-family: "Outfit", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
